Centos7 support. Replace Tomcat with Jetty. Bundled Fticks.